// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistrictConceptReports when the access type is limited renders 1`] = `
<Connect(DistrictConceptReports)
  accessType="limited"
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DistrictConceptReports
    accessType="limited"
    classroomNames={
      Array [
        "All Classrooms",
      ]
    }
    conceptReportsData={Array []}
    csvData={
      Array [
        Array [
          "Student",
          "Teacher",
          "Classroom",
          "School",
          "Correct",
          "Incorrect",
          "Success Rate",
        ],
      ]
    }
    errors={false}
    filteredConceptReportsData={Array []}
    getDistrictConceptReports={[Function]}
    loading={false}
    schoolNames={
      Array [
        "All Schools",
      ]
    }
    selectedClassroom="All Classrooms"
    selectedSchool="All Schools"
    selectedTeacher="All Teachers"
    store={
      Object {
        "dispatch": [Function],
        "getAction": [Function],
        "getActions": [Function],
        "getState": [Function],
        "isActionDispatched": [Function],
        "isActionTypeDispatched": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    switchClassroom={[Function]}
    switchSchool={[Function]}
    switchTeacher={[Function]}
    teacherNames={
      Array [
        "All Teachers",
      ]
    }
  >
    <div
      className="container gray-background-accommodate-footer"
    >
      <NonPremiumReport
        bezelPath="concepts_report_product_bezel_2x.png"
        headerText="Concepts Report"
        subheaderText="View the number of times a student correctly or incorrectly used a targeted concept. Included with Quill Premium."
      >
        <div
          className="white-background-accommodate-footer"
        >
          <div
            className="container non-premium-admin-report"
          >
            <section
              className="top-section"
            >
              <h1>
                Concepts Report
              </h1>
              <p>
                View the number of times a student correctly or incorrectly used a targeted concept. Included with Quill Premium.
              </p>
              <div
                className="buttons"
              >
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="https://calendly.com/alex-quill"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Talk to sales
                </a>
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="/premium"
                  target="_blank"
                >
                  Explore premium
                </a>
              </div>
              <img
                alt=""
                className="bezel"
                src="undefined/images/pages/administrator/non_premium_report_view/concepts_report_product_bezel_2x.png"
              />
            </section>
          </div>
        </div>
      </NonPremiumReport>
    </div>
  </DistrictConceptReports>
</Connect(DistrictConceptReports)>
`;

exports[`DistrictConceptReports when the access type is restricted renders 1`] = `
<Connect(DistrictConceptReports)
  accessType="restricted"
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DistrictConceptReports
    accessType="restricted"
    classroomNames={
      Array [
        "All Classrooms",
      ]
    }
    conceptReportsData={Array []}
    csvData={
      Array [
        Array [
          "Student",
          "Teacher",
          "Classroom",
          "School",
          "Correct",
          "Incorrect",
          "Success Rate",
        ],
      ]
    }
    errors={false}
    filteredConceptReportsData={Array []}
    getDistrictConceptReports={[Function]}
    loading={false}
    schoolNames={
      Array [
        "All Schools",
      ]
    }
    selectedClassroom="All Classrooms"
    selectedSchool="All Schools"
    selectedTeacher="All Teachers"
    store={
      Object {
        "dispatch": [Function],
        "getAction": [Function],
        "getActions": [Function],
        "getState": [Function],
        "isActionDispatched": [Function],
        "isActionTypeDispatched": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    switchClassroom={[Function]}
    switchSchool={[Function]}
    switchTeacher={[Function]}
    teacherNames={
      Array [
        "All Teachers",
      ]
    }
  >
    <div
      className="container gray-background-accommodate-footer"
    >
      <NonPremiumReport
        bezelPath="concepts_report_product_bezel_2x.png"
        headerText="Concepts Report"
        subheaderText="View the number of times a student correctly or incorrectly used a targeted concept. Included with Quill Premium."
      >
        <div
          className="white-background-accommodate-footer"
        >
          <div
            className="container non-premium-admin-report"
          >
            <section
              className="top-section"
            >
              <h1>
                Concepts Report
              </h1>
              <p>
                View the number of times a student correctly or incorrectly used a targeted concept. Included with Quill Premium.
              </p>
              <div
                className="buttons"
              >
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="https://calendly.com/alex-quill"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Talk to sales
                </a>
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="/premium"
                  target="_blank"
                >
                  Explore premium
                </a>
              </div>
              <img
                alt=""
                className="bezel"
                src="undefined/images/pages/administrator/non_premium_report_view/concepts_report_product_bezel_2x.png"
              />
            </section>
          </div>
        </div>
      </NonPremiumReport>
    </div>
  </DistrictConceptReports>
</Connect(DistrictConceptReports)>
`;
